# evergreen-rag

./: .gitignore  CLAUDE.md  Dockerfile  README.md  SPEC.md  docker-compose.yml  pyproject.toml
.claude/agents/: data-pipeline.md  embedding.md  integration.md  query-api.md  vector-store.md
.github/workflows/: ci.yml  release.yml
docs/: dev-environment-reorganization.md  installation.md
docs/integration/: api-reference.md  curl-examples.md  deployment.md  perl-examples.md
scripts/: init-db.sql  load_marc_bulk.py
src/evergreen_rag/: __init__.py
src/evergreen_rag/api/: __init__.py  main.py  routes.py
src/evergreen_rag/embedding/: __init__.py  service.py
src/evergreen_rag/extractor/: __init__.py  marc_extractor.py
src/evergreen_rag/generation/: __init__.py  service.py
src/evergreen_rag/hooks/: rag-reingest.pl
src/evergreen_rag/ingest/: __init__.py  listener.py  pipeline.py
src/evergreen_rag/models/: __init__.py  embedding.py  marc.py  search.py
src/evergreen_rag/search/: __init__.py  vector_search.py
src/evergreen_rag/static/: index.html
src/evergreen_rag/static/opac/: README.md  semantic-search.css  semantic-search.js
tests/benchmarks/: __init__.py  bench_embedding.py  bench_ingest.py  bench_search.py  conftest.py  generate_marc.py  run_all.py
tests/fixtures/: quality_queries.json
tests/fixtures/marc/: sample_records.xml
tests/integration/: drivers.py  test_ingest.py  test_phase2.py  test_phase3.py
tests/unit/: test_api.py  test_embedding.py  test_extractor.py  test_generation.py  test_search.py
(+7 files in other folders)
