[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evergreen-rag"
version = "0.1.0"
description = "Retrieval-Augmented Generation for Evergreen ILS Search"
readme = "README.md"
license = "GPL-2.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    "pgvector>=0.3",
    "pydantic>=2.7",
    "lxml>=5.1",
    "httpx>=0.27",
    "ollama>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "testplan>=25.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/evergreen_rag"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
